--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -8,11 +8,15 @@ platforms:
       provision_command:
         # remove bogus entry to make fb_fstab happy
         - sed -i '/UUID=/d' /etc/fstab
+        # enable EPEL (for stuff like hddtemp)
+        - rpm -Uvh http://download.fedoraproject.org/pub/epel/6/x86_64/epel-release-6-8.noarch.rpm
   - name: centos-7
     driver_config:
       provision_command:
         # remove bogus entry to make fb_fstab happy
         - sed -i '/UUID=/d' /etc/fstab
+        # enable EPEL (for stuff like hddtemp)
+        - rpm -Uvh http://dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-7-8.noarch.rpm
       run_command: /usr/sbin/init
   - name: ubuntu-14.04
   - name: ubuntu-16.04
@@ -27,11 +31,15 @@ platforms:
       run_command: /sbin/init
   - name: debian-sid
     driver_config:
-      run_command: /sbin/init
+      run_command: /bin/systemd
 
 provisioner:
   name: chef_zero
 
 suites:
   - name: default
-    run_list: recipe[fb_init_sample]
+    run_list:
+      - recipe[fb_init_sample]
+      - recipe[fb_apcupsd]
+      - recipe[fb_dnsmasq]
+      - recipe[fb_hddtemp]
