--- a/.travis.yml
+++ b/.travis.yml
@@ -32,3 +32,8 @@ script:
   - bundle exec rubocop --display-cop-names -c .rubocop.yml
   - ./scripts/run_foodcritic
   - bundle exec kitchen verify $INSTANCE
+  - openssl aes-256-cbc -K $encrypted_9d2e88e318b2_key -iv $encrypted_9d2e88e318b2_iv -in phild-supermarket.pem.enc -out supermarket.pem -d
+
+deploy:
+  - provider: script
+  - script: cd cookbooks; for i in *; do knife cookbook site unshare $i -k ../supermarket.pem -u phild -y; knife cookbook site share $i Other -o . -k supermarket.pem -u phild; done
