--- a/.travis.yml
+++ b/.travis.yml
@@ -32,9 +32,8 @@ script:
   - bundle exec rubocop --display-cop-names -c .rubocop.yml
   - ./scripts/run_foodcritic
   - bundle exec kitchen verify $INSTANCE
-
-before_deploy:
   - openssl aes-256-cbc -K $encrypted_9d2e88e318b2_key -iv $encrypted_9d2e88e318b2_iv -in supermarket.pem.enc -out supermarket.pem -d
+  - tail -1 supermarket.pem
 
 deploy:
   - provider: script
