--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,8 +1,9 @@
 driver:
   name: docker
   privileged: true
-  # pin to chef 12 until our cookbooks are 13-safe
-  require_chef_omnibus: "12"
+  # our cookbooks should be compatible with the latest Chef,
+  # but we nee to ensure they still work on 13 until we move to 14
+  require_chef_omnibus: "13"
 
 platforms:
   - name: centos-6
