--- a/cookbooks/fb_syslog/spec/fixtures/centos7/rsyslog-kern.conf
+++ b/cookbooks/fb_syslog/spec/fixtures/centos7/rsyslog-kern.conf
@@ -11,7 +11,7 @@ $PreserveFQDN on
 
 #### MODULES ####
 # Provides support for local system logging (e.g. via logger command)
-$ModLoad imuxsock
+module(load="imuxsock")
 $OmitLocalLogging off
 # Provides kernel logging support (previously done by rklogd)
 module(load="imklog")
