Fix typo in kitchen.yml
kitchen.yml had a typo that was preventing debian containers from
using systemd which was causing a lot of failures.

This is based on top of #255 - and together Debian kitchen tests
now pass.

Signed-off-by: Phil Dibowitz <phil@ipom.com>

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -35,11 +35,11 @@ platforms:
   - name: debian-9
     driver:
       image: dokken/debian-9
-      pid_one_commmand: /bin/systemd
+      pid_one_command: /bin/systemd
   - name: debian-10
     driver:
       image: dokken/debian-10
-      pid_one_commmand: /bin/systemd
+      pid_one_command: /bin/systemd
 
 provisioner:
   name: dokken
