--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ['2.7', '3.0', '3.1']
+        ruby: ['3.1', '3.3']
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
@@ -28,9 +28,11 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - centos-stream-8
-          - ubuntu-2004
-          - debian-11
+          - centos-stream-9
+          - centos-stream-10
+          - ubuntu-2204
+          - ubuntu-2404
+          - debian-12
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
@@ -39,7 +41,7 @@ jobs:
       uses: actionshub/chef-install@2.0.4
       with:
         project: chef-workstation
-        version: 20.11.180
+        version: 25.2.1075
     - name: Run Kitchen
       uses: actionshub/test-kitchen@2.1.0
       with:
