--- a/.kitchen.vagrant.yml
+++ b/.kitchen.vagrant.yml
@@ -8,9 +8,8 @@ provisioner:
   name: chef_zero
   product_name: cinc
   # our cookbooks should be compatible with the latest Chef,
-  # but we nee to ensure they still work on 13 until we move to 14
+  # but we need to ensure they still work earlier versions of 18.
   product_version: <%= ENV['CHEF_VERSION'] || 'latest'  %>
-  # require_chef_omnibus: true
   install_script: https://omnitruck.cinc.sh/install.sh
   chef_root: /opt/cinc
 
