Weekly Meetings docs
This is the doc for the weekly meeting reports.

Signed-off-by: Phil Dibowitz <phil@ipom.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,7 +3,7 @@ AllCops:
   TargetRubyVersion: 2.7
   Exclude:
     # template files named `rb` instead of `erb` are a sin against ruby-nature.
-    - '**/templates/**/*.rb'#
+    - '**/templates/**/*.rb'
 
 Bundler/DuplicatedGem:
   Enabled: true
