--- a/.github/workflows/reusable-kitchen-tests.yml
+++ b/.github/workflows/reusable-kitchen-tests.yml
@@ -90,11 +90,24 @@ jobs:
         shell: bash
 
       - name: Run Kitchen
-        uses: actionshub/test-kitchen@main
-        with:
-          suite: ${{ inputs.suite }}
-          os: ${{ matrix.os }}
-          working-directory: ${{ inputs.universe && 'universe' || '.' }}
         env:
           CHEF_LICENSE: accept-no-persist
-          CHEF_VERSION: 18.6.14
+        run: |-
+          cd ${{ inputs.universe && 'universe' || '.' }}
+          PATH=/home/runner/.chef/gem/ruby/3.1.0/bin:$PATH
+          chef gem install kitchen-dokken
+          kitchen converge ${{inputs.suite}}-${{ matrix.os }}
+
+      # Eventually we will move back to the pre-canned workflow, but
+      # the updates to Docker broke kitchen-dokken and so we need to
+      # temporarily switch to a custom script.
+  
+      #- name: Run Kitchen
+      #  uses: actionshub/test-kitchen@main
+      #  with:
+      #    suite: ${{ inputs.suite }}
+      #    os: ${{ matrix.os }}
+      #    working-directory: ${{ inputs.universe && 'universe' || '.' }}
+      #  env:
+      #    CHEF_LICENSE: accept-no-persist
+      #    CHEF_VERSION: 18.6.14
